fix image overflow

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -236,3 +236,9 @@ body {
     color: $white;
     background: $selection-bg;
 }
+
+/* Image overflow */
+img {
+    max-width: 100%;
+    height: auto;
+}
